--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "js-cookie": "^3.0.5",
     "next": "13.4.16",
     "pdf-parse": "^1.1.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.3"
   }
 }
